add project section hero

--- a/components/index.html
+++ b/components/index.html
@@ -33,6 +33,11 @@
       <li><a class="sidebar-link" href="#gallery-block__letter">gallery block letter</a></li>
       <li><a class="sidebar-link" href="#gallery-collection">gallery collection</a></li>
       <li class="space">space</li>
+      <li><a class="sidebar-link" href="#project-section">PROJECT SECTION</a></li>
+      <li><a class="sidebar-link" href="#hero-image">hero image</a></li>
+      <li><a class="sidebar-link" href="#prev-next-text">previous/next text</a></li>
+      <li><a class="sidebar-link" href="#hero">hero</a></li>
+      <li class="space">space</li>
       <li><a class="sidebar-link" href="#page-footer">PAGE FOOTER</a></li>
       <li><a class="sidebar-link" href="#footer-brand">footer-brand</a></li>
       <li><a class="sidebar-link" href="#gallery-list">gallery-list</a></li>
@@ -426,6 +431,53 @@
       </div>
     </div>
   </article>
+
+    <!--PROJECT SECTION-->
+    <h3 id="project-section">PROJECT SECTION</h3>
+    <article class="component">
+      <h3 id="hero-image">Hero image</h3>
+      <div class="component__image">
+        <img
+        srcset="screenshots/atoms/hero__image.png 1.7x"
+        src="screenshots/atoms/hero__image.png"
+        alt="hero image">
+      </div>
+      <div class="component__code">
+        <div class="hero-image">
+          <img src="../images/hero__image.png" alt="people observing art in a gallery">
+        </div>
+      </div>
+  
+      <h3 id="prev-next-text">Hero prev/next text</h3>
+      <div class="component__image">
+        <img
+        srcset="screenshots/atoms/hero__prev-next-text.png 1.7x"
+        src="screenshots/atoms/hero__prev-next-text.png"
+        alt="previous/next text">
+      </div>
+      <div class="component__code">
+        <div class="hero__prev-next-text">
+          <p>Previous project | Next project</p>
+        </div>
+      </div>
+  
+      <h3 id="hero">Hero</h3>
+      <div class="component__image">
+        <img
+        srcset="screenshots/molecules/hero.png 1.7x"
+        src="screenshots/molecules/hero.png"
+        alt="previous/next text">
+      </div>
+      <div class="component__code">
+        <div class="hero-image">
+          <img src="../images/hero__image.png" alt="people observing art in a gallery">
+        </div>
+        <div class="hero__prev-next-text">
+          <p>Previous project | Next project</p>
+        </div>
+      </div>
+    </article>
+
 
   <!--footer components-->
 
